gcc/testsuite/rust/rustc/ui/consts/array-literal-len-mismatch_dg.rs
const NUMBERS: [u8; 3] = [10, 20];
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { help ".E0308." "" { target *-*-* } .-2 }
fn main() {}

